# MeshFu

./: .gitignore  README.md
MeshPacker/src/: MeshPackerApp.cpp
MeshPacker/xcode/: Info.plist
MeshPacker/xcode/MeshPacker/: MeshPacker.1  main.cpp
MeshPacker/xcode/MeshPacker.xcodeproj/: project.pbxproj
MeshPacker/xcode/MeshPacker.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MeshPacker/xcode/MeshPacker.xcodeproj/project.xcworkspace/xcuserdata/bjoshi.xcuserdatad/: UserInterfaceState.xcuserstate
MeshPacker/xcode/MeshPacker.xcodeproj/xcuserdata/bjoshi.xcuserdatad/xcschemes/: MeshPacker.xcscheme  xcschememanagement.plist
blocks/MeshFu/include/: MeshFuContainer.h  MeshFuDrawableMesh.h  MeshFuGeometry.h  MeshFuModelWrangler.h  MeshFuNode.h  MeshFuRiggedGeometry.h  MeshFuUtil.h
blocks/MeshFu/src/: MeshFuContainer.cpp  MeshFuDrawableMesh.cpp  MeshFuGeometry.cpp  MeshFuModelWrangler.cpp  MeshFuNode.cpp  MeshFuRiggedGeometry.cpp  MeshFuUtil.cpp
meshFuDesktopAppExample/xcode/: Info.plist
meshFuDesktopAppExample/xcode/meshFuDesktopAppExample.xcodeproj/: project.pbxproj
meshFuDesktopAppExample/xcode/meshFuDesktopAppExample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
meshFuDesktopAppExample/xcode/meshFuDesktopAppExample.xcodeproj/project.xcworkspace/xcuserdata/bjoshi.xcuserdatad/: UserInterfaceState.xcuserstate
meshFuDesktopAppExample/xcode/meshFuDesktopAppExample.xcodeproj/xcuserdata/bjoshi.xcuserdatad/xcschemes/: xcschememanagement.plist  (+1 more)
meshFuGlkitAppExample/: .gitignore  CinderGLView.xib  meshFuGlkitApp-Info.plist  meshFuGlkitApp-Prefix.pch
meshFuGlkitAppExample/include/: AppDelegate.h  meshFuGlkitAppSketch.h
meshFuGlkitAppExample/meshFuGlkitApp.xcodeproj/: project.pbxproj
meshFuGlkitAppExample/src/: AppDelegate.mm  meshFuGlkitAppSketch.cpp
src/: AppCore.cpp  AppCore.h  CMakeLists.txt  MetaApp.cpp  MetaApp.h  desktopApp.cpp  glkitFuSketch.cpp  glkitFuSketch.h  skinMorph.fsh  skinMorph.vsh
src/MeshFuUtil/: CMakeLists.txt  MeshPacker.cpp  MeshUnpacker.cpp  ModelWranglerAssimp.cpp  ModelWranglerAssimp.h  RiggedGeometryAssimp.cpp  RiggedGeometryAssimp.h
src/assets/seymour/: astroboy_walk.dae.cmf
src/cmake/: ConfigMacros.cmake  FindAssimp.cmake  FindCinder.cmake  FindMeshFu.cmake  Gch.cmake  ListFiles.cmake
