FIND_PACKAGE(assimp)
FIND_PACKAGE(cinder)

SET(MESHFUASSIMP_SOURCES
RiggedGeometryAssimp.cpp
RiggedGeometryAssimp.h
MeshPacker.cpp
)



SET(MESUFUEXE "MeshPacker")

ADD_EXECUTABLE(${MESUFUEXE} ${MESHFUASSIMP_SOURCES})

SET_TARGET_PROPERTIES(${MESUFUEXE}
  PROPERTIES
  COMPILE_FLAGS "-fvisibility-inlines-hidden"
  OSX_ARCHITECTURES i386
  )


TARGET_LINK_LIBRARIES(${MESUFUEXE} ${assimp_LIBRARY})
TARGET_LINK_LIBRARIES(${MESUFUEXE} "meshfu")
TARGET_LINK_LIBRARIES(${MESUFUEXE} ${ZLIB_LIBRARIES} )
TARGET_LINK_LIBRARIES(${MESUFUEXE} ${cinder_LIBRARIES} )
FIND_AND_LINK_LIBRARY(Accelerate ${MESUFUEXE})
FIND_AND_LINK_LIBRARY(AudioToolbox ${MESUFUEXE})
FIND_AND_LINK_LIBRARY(AudioUnit ${MESUFUEXE})
FIND_AND_LINK_LIBRARY(CoreAudio ${MESUFUEXE})
FIND_AND_LINK_LIBRARY(QuickTime ${MESUFUEXE})
FIND_AND_LINK_LIBRARY(QTKit ${MESUFUEXE})
FIND_AND_LINK_LIBRARY(CoreVideo ${MESUFUEXE})
FIND_AND_LINK_LIBRARY(Carbon ${MESUFUEXE})
FIND_AND_LINK_LIBRARY(OpenGL ${MESUFUEXE})
FIND_AND_LINK_LIBRARY(Cocoa ${MESUFUEXE})
FIND_AND_LINK_LIBRARY(AppKit ${MESUFUEXE})
FIND_AND_LINK_LIBRARY(CoreData ${MESUFUEXE})
FIND_AND_LINK_LIBRARY(Foundation ${MESUFUEXE})

SET(MESHFUUNPACKER_SOURCES
MeshUnpacker.cpp
)

SET(MESUFUEXE2 "MeshUnpacker")

ADD_EXECUTABLE(${MESUFUEXE2} ${MESHFUUNPACKER_SOURCES})

SET_TARGET_PROPERTIES(${MESUFUEXE2}
  PROPERTIES
  COMPILE_FLAGS "-fvisibility-inlines-hidden"
  OSX_ARCHITECTURES i386
  )
  
TARGET_LINK_LIBRARIES(${MESUFUEXE2} "meshfu")
TARGET_LINK_LIBRARIES(${MESUFUEXE2} ${ZLIB_LIBRARIES} )
TARGET_LINK_LIBRARIES(${MESUFUEXE2} ${cinder_LIBRARIES} )
FIND_AND_LINK_LIBRARY(Accelerate ${MESUFUEXE2})
FIND_AND_LINK_LIBRARY(AudioToolbox ${MESUFUEXE2})
FIND_AND_LINK_LIBRARY(AudioUnit ${MESUFUEXE2})
FIND_AND_LINK_LIBRARY(CoreAudio ${MESUFUEXE2})
FIND_AND_LINK_LIBRARY(QuickTime ${MESUFUEXE2})
FIND_AND_LINK_LIBRARY(QTKit ${MESUFUEXE2})
FIND_AND_LINK_LIBRARY(CoreVideo ${MESUFUEXE2})
FIND_AND_LINK_LIBRARY(Carbon ${MESUFUEXE2})
FIND_AND_LINK_LIBRARY(OpenGL ${MESUFUEXE2})
FIND_AND_LINK_LIBRARY(Cocoa ${MESUFUEXE2})
FIND_AND_LINK_LIBRARY(AppKit ${MESUFUEXE2})
FIND_AND_LINK_LIBRARY(CoreData ${MESUFUEXE2})
FIND_AND_LINK_LIBRARY(Foundation ${MESUFUEXE})
